# impact

./: README.md
S V spritual/spritual/models/: admin.py  urls.py
S V spritual/spritual/spritual/: asgi.py  settings.py
SVspiritual/files/: about.html  contact.html  donation-details.html  donation-listing.html  events.html  product-details.html  stories.html
SVspiritual/spiritual_ngo/: README.md  requirements.txt
SVspiritual/spiritual_ngo/models/: admin.py  forms.py  image_constant.py  models.py  views.py
SVspiritual/spiritual_ngo/spritual/: settings.py  (+1 more)
SVspiritual/spritual/: .gitignore  Procfile  README.md  requirements.txt
frontend/Documention/: index.html
frontend/Gainioz-html/: about.html  blog-details.html  blog.html  donation-listing.html  event-details.html  faq.html  index-2.html  index-3.html  index-4.html  index.html  products.html  service.html  stories-details.html  volunteers.html
frontend/NGO/: index.html
sandeep spritual/spritual/: manage.py
spritual/models/: admin.py  forms.py  image_constant.py  models.py  views.py
spritual/spritual/: settings.py  urls.py  wsgi.py
spritualroot/: Procfile  manage.py  pyproject.toml  requirements.txt
spritualroot/models/: admin.py  models.py
spritualroot/models/migrations/: 0001_initial.py  0002_contactform_date.py  0003_rename_date_contactform_modified_date_and_more.py  0004_gethelpmodel_volunteermoodel_remove_contactform_name_and_more.py  0005_projectsmodel_storiesmodel.py  0006_siteinfomodel_alter_storiesmodel_image.py
spritualroot/spritualroot/: asgi.py  settings.py  urls.py  wsgi.py
(+149 files in other folders)
